# FlandersBOT

./: .cspell.json  .dockerignore  .gitignore  Dockerfile  README.md  bot.py  bot.sql  botInfo.py  bot_info.py  cartoons.py  commands.py  config.py  dbl.py  docker-compose.yml  example.env  flandersBot.py  index.js  info.py  main.py  package-lock.json  prefixes.py  privacy-policy.md  pyproject.toml  requirements.txt  simpsonsTrivia.json  terms-of-service.md
.github/actions/setup/: action.yml
.github/workflows/: lint.yml
api/: bot_lists.py  cartoons.py  compuglobal.py  dbl.py  tvshows.py
cogs/: _tvshows.py  events.py  futurama.py  general.py  owner.py  prefixes.py  rickandmorty.py  simpsons.py  stats.py  thirtyrock.py  top_gg.py  topgg.py  trivia.py  trivia_category.py  tvshow.py  tvshows.py  westwing.py
cogs/api/: cartoons.py
cogs/data/: commandStats.json  command_stats_example.json  futuramaTrivia.json  futurama_trivia.json  prefixes.json  simpsons_trivia.json
flanders/: __init__.py  bot.py
flanders/cogs/: __init__.py  _tvshows.py  events.py  futurama.py  general.py  owner.py  rickandmorty.py  simpsons.py  stats.py  trivia.py  tv.py
flanders/cogs/data/: futurama_trivia.json  simpsons_trivia.json
flanders/components/: __init__.py  builder_view.py  caption_button.py  caption_modal.py  content_view.py  generate_button.py  leaderboard_view.py  scoreboard_view.py  search_dropdown.py  trivia_view.py  tv.py
flanders/models/: __init__.py  preferences.py  reference.py  trivia_category.py  trivia_models.py
flanders/models/trivia/: __init__.py  board.py  category.py  match.py  question.py  round.py  user_stats.py
flanders/settings/: __init__.py  config.py
flanders/ui/: __init__.py  builder_view.py  leaderboard_view.py  preferences_view.py  privacy_view.py  scoreboard_view.py  trivia_view.py  user_stats_view.py
flanders/utils/: __init__.py  logging.py  trivia_db.py  tv_db.py  view_validator.py
scripts/: backup_db.sh  fix_trivia_sources.py  restore_db.sh
settings/: config.py  config_example.json
