[project]
name = "flandersbot"
version = "0.1.0"
description = "A discord bot with commands surrounding The Simpsons, Futurama and Rick and Morty and more! "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.0",
    "anyio>=4.13.0",
    "asyncpg>=0.31.0",
    "compuglobal>=0.3.8",
    "discord-py>=2.7.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.14",
    "types-aiofiles>=25.1.0.20260518",
    "types-tabulate>=0.10.0.20260508",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D107"]

[tool.ruff.per-file-ignores]
"scripts/*" = ["INP001", "T201"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
